# chorus_waveform_conversion

./: LICENSE  README.md  pyproject.toml  waveform_conversion_test.ipynb
.github/workflows/: tests.yml
chorus_converter/: utils.py
submission/templates/: SUBMISSION_template.md
tests/: test_hello.py
